--- a/style.css
+++ b/style.css
@@ -1,167 +1,40 @@
 html {
     height: 100%;
     margin: 0;
+    padding: 0;
 }
 
 body {
-    display: flex;
+    display:flex;
     flex-direction: column;
     margin: 0;
-    height: 100%;  
+    padding: 0;
 }
 
-#header {
-    flex: 0;
+.container {
+    flex: 1;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    background-color: #1f2937;
+    padding-left: 50px;
+    padding-right: 50px;
 }
 
-#header div {
+.container.header {
+    flex:0;
+    justify-content:space-between;
+    background-color: #1f2937;
     font-size: 24px;
     color: #f9faf8;
-}
-
-#header ul li {
-    font-size: 18px;
-    color: #e5e7eb;
-}
-
-#upper_part {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    margin: 0;
-    padding: 100px;
-    background-color: #1f2937;
-    gap: 20px;
-    
-}
-
-#upper_block {
-    display: flex;
-    height: 100%;
-    gap: 20px;
-}
-
-#up_bl_left {
-    flex: 1;
-    display: flex;
-    flex-direction: column; 
-    gap: 20px;
-}
-
-#up_bl_title {
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight:bolder; 
-    font-size: 48px;
-    color: #f9faf8;
-    display: flex;
-}
-
-#holder {
-    flex:1;
-    background-color: grey;
-    height: 100%;
-    text-align: center;
-}
-
-#middle_part_1 {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    margin: 0;
-    padding: 0;
-    justify-content: center;
-}
-
-#mid_block_title {
-    flex: 0;
-    align-self: center;
-}
-
-#squares {
-    flex: 1;
-    display: flex;
-    justify-content:center;
-}
-
-#squares div {
-    display: flex;
-    flex-direction: column;
-}
-
-.square {
-    flex: 1;
-    max-height: 50px;
-    max-width: auto;;
-    border: solid;
-    border-color: blue;
-    border-radius: 5px;
-    height: 100%;
-    width: 100%;
-}
-
-#squares div span {
-    flex: 0;
-    height: 100%;
-    width: 100%;
-}
-
-#middle_part_2 {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-}
-
-#middle_part_2 p {
-    height: 100%;
-    width: 100%;
-}
-
-.quote {
-    flex: 1;  
-}
-
-.quote_author {
-    flex: 0;
-    text-decoration: underline;
-    font-style: italic;
-}
-
-#lower_part {
-    flex: 1;
-    display: flex;
-    flex-direction: row;
+    font-family: 'Times New Roman', Times, serif;
     align-items: center;
-    justify-content: center;
 }
 
-.left_part {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-}
-
-.right_part {
-    flex: 1;
-}
-
-#footer {
-    flex: 0;
-    align-self: center;
-    justify-self: center;
-}
-
-ul {
+.links {
     display: flex;
     flex-direction: row;
-    padding: 0;
-    margin: 0;
-    gap: 5px;
+    font-size: 18px;
+    color: #E5E7EB;
 }
 
-li {
-    list-style: none;
+.container.one {
+
 }
